<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Interlock" Id="{b0e3b1c4-cbac-42eb-b390-bdd7262bc368}">
    <Declaration><![CDATA[TYPE ST_Interlock :
STRUCT
	bState : BOOL := FALSE;
	sReason : STRING(GVL.g_nMAX_LEN_REASON) := 'none';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>